--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Diwali</title>
 </head>
 <body>
-    <div class="container1">
+    <div class="container">
         <div class="bubble">
             <span style="--i:12;" class="r" id="box1"></span>
             <span style="--i:11;" class="r" id="box2"></span>
