--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </div>
     </div>
     <dic class="text">
-        <h1>Happy Diwali from Ranajit</h1>
+        <h1>Happy Diwali</h1>
     </dic>
 </body>
 </html>
