--- a/index.html
+++ b/index.html
@@ -45,8 +45,10 @@
         <div class="diya">
         </div>
     </div>
-    <dic class="text">
-        <h1>Happy Diwali</h1>
-    </dic>
+    <div class="text">
+        <div class="box1"><h1>Happy Diwali</h1></div>
+        <div class="box2"><h3>Wishing you a bright and joyful<br>Diwali filled with love and light!</h3></div>
+        <div class="box3"><h5>from Ranajit</h5></div>
+    </div>
 </body>
 </html>
